k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fsbone-app
  namespace: default
  labels:
    app: fsbone-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fsbone-app
  template:
    metadata:
      labels:
        app: fsbone-app
    spec:
      containers:
      - name: fsbone-app
        image: 864981727549.dkr.ecr.ap-northeast-2.amazonaws.com/fsbone-app:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
