k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fsbone-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
    - port: 443
      targetPort: 3000
      protocol: TCP
      name: https
  selector:
    app: fsbone-app
