k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fsbone-service
  namespace: default
  labels:
    app: fsbone-app
spec:
  type: LoadBalancer
  ports:
    - port: 80          # 서비스가 노출될 포트
      targetPort: 3000  # 컨테이너 포트 (Next.js 기본 포트)
      protocol: TCP
  selector:
    app: fsbone-app    # deployment.yml의 label과 일치해야 함
